# snap-public

./: .gitignore  Anchor.toml  CHANGELOG.md  FINDINGS.md  LICENSE  README.md  REPO_ROLE.md  package-lock.json  package.json  treasury-config.json  tsconfig.json
.github/: SECURITY.md
agent-kit-tool/: README.md  package-lock.json  package.json  tsconfig.json
agents/: agent-a.ts  agent-b-relayed.ts  agent-b.ts
circuits/: withdraw.circom  withdraw_20.circom
docs/: ANONYMITY_SET.md  CEREMONY.md  CIRCUIT_SPEC.md  COMPLIANCE.md  GOVERNANCE.md  PARAMETER_GENERATION.md  RELAYER_RUNBOOK.md  SCALING_REPORT.md  THREAT_MODEL.md  TROUBLESHOOTING.md
examples/: agent-to-agent.ts  basic-payment.ts  relayed-withdrawal.ts
integrations/: README.md
ops/: FUNDED_DEVNET_CANARY.md
programs/agent-privacy-pool/: Cargo.toml
programs/agent-privacy-pool/src/: lib.rs  poseidon.rs  verifying_key_10.rs  verifying_key_20.rs
relayer/: README.md  package-lock.json  package.json
scripts/: anonymity-check.ts  ceremony.ts  create-devnet-pool.ts  create-mainnet-pools.ts  demo.sh  devnet-concurrency-reality-check.ts  devnet-phase13b-relayer-validation.ts  devnet-phase13b-validation.ts  devnet-phase14a-validation.ts  devnet-pool-validation.ts  devnet-recovery-canary.ts  devnet-relayer-canary.ts  devnet-relayer-validation.ts  devnet-test.ts  devnet-validation-shared.ts  generate-treasury.ts  health-check.ts  mainnet-dashboard.ts  mainnet-deploy.ts  mainnet-verify.ts  monitor-config.json  monitor.ts  parse-vk.ts  pre-launch-checklist.ts  publish.sh  quickstart.ts  reconcile-relayer-burst.ts  (+8 more)
(+93 files in other folders)
